@@ -3,3 +3,9 @@
 {
     matrix(sapply(object$models, fitted), ncol=length(object$models))
 }
+
+`fitted.radfit.frame` <-
+    function(object, ...)
+{
+    lapply(object, fitted, ...)
+}
